# jhu-605-617-gpumonitoring

./: README.md
crawler/: .gitignore  CMakeLists.txt  GpuMonitor.cpp  GpuMonitor.h  NvidiaSmiHelper.cpp  app_main.cu
gpumon/: CMakeLists.txt  SETUP_GUIDE.md
gpumon/clientlib/: BLOCK_STYLE_API.md  CMakeLists.txt  README.md
gpumon/clientlib/cmake/: gpumon_clientConfig.cmake.in
gpumon/clientlib/example/: CMakeLists.txt
gpumon/clientlib/include/gpumon/: gpumon.hpp
gpumon/crawler/: CMakeLists.txt  ClientLogReader.cpp  ClientLogReader.h  Config.cpp  Config.h  GpuMonitor.cpp  GpuMonitor.h  MetricsSender.cpp  NvidiaSmiHelper.cpp  NvidiaSmiHelper.h  app_main.cu
gpumon/gpumon_client/: README.md
gpumon/gpumon_client/example/: CMakeLists.txt  block_style_example.cu  example_usage.cu
gpumon/gpumon_client/include/gpumon/backends/: cuda.hpp
gpumon/gpumon_client/include/gpumon/core/: common.hpp  monitor.hpp
gpumon/gpumon_python/: example.py  setup.py
gpumon/gpumon_python/src/: bindings.cpp
webservice/: .gitignore  pom.xml
webservice/backend_python/: README.md  conftest.py  core.py  main.py  requirements.txt  test_main.http
webservice/backend_python/controllers/: gpus.py  health.py  metrics.py  stats.py
webservice/backend_python/tests/: test_app.py
webservice/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
webservice/frontend/src/: App.jsx  Root.jsx  api.js  main.jsx
webservice/frontend/src/components/: Dashboard.tsx  DetailDialog.tsx  Login.jsx  MetricChart.jsx  MetricsTable.tsx  PerformanceTable.tsx  Register.jsx  SimpleTimelineTable.tsx  TimelineProfiler.tsx
webservice/frontend/src/types/: metrics.ts
webservice/frontend/src/utils/: DataTransformer.ts
webservice/src/main/kotlin/com/myoungho/backend/: BackendApplication.kt
webservice/src/main/kotlin/com/myoungho/backend/config/: CorsConfig.kt
webservice/src/main/kotlin/com/myoungho/backend/migration/: SchemaInitializer.kt
webservice/src/main/kotlin/com/myoungho/backend/model/: ApiKeyEntity.kt  GpuDeviceEntity.kt  MetricDeviceEntity.kt  MetricEntity.kt  ProcessMetricEntity.kt  UserEntity.kt
webservice/src/main/kotlin/com/myoungho/backend/repo/: ApiKeyRepository.kt  GpuDeviceRepository.kt  MetricDeviceRepository.kt  MetricRepository.kt  ProcessMetricRepository.kt  UserRepository.kt
webservice/src/main/kotlin/com/myoungho/backend/service/: ApiKeyService.kt  MetricService.kt
webservice/src/main/kotlin/com/myoungho/backend/web/: AuthController.kt  GlobalExceptionHandler.kt  GpuController.kt  GpusController.kt  HealthController.kt  MetricsController.kt  StatsController.kt
webservice/src/main/resources/: application.properties
webservice/src/test/kotlin/com/myoungho/backend/: BackendApplicationTests.kt
webservice/src/test/kotlin/com/myoungho/backend/repo/: ProcessMetricRepositoryTests.kt
webservice/src/test/kotlin/com/myoungho/backend/web/: ApiKeyFlowTests.kt  ApiTests.kt  GpuDevicesFromMetricsTests.kt  ProcessMetricsApiTests.kt  ProcessSteadyClockTimestampFallbackTests.kt  ProcessTimestampNormalizationTests.kt
webservice/src/test/resources/: application-test.properties  application.properties
